fixing cloud cutoff

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -314,7 +314,7 @@ h1,h2,h3,h4,h5,h6{
 .cloud-container {
     overflow: hidden;
     top:-8%;
-    min-height: 65vh;
+    min-height: 68vh;
     position: absolute;
     /* background-color: white; */
     width: 100%;
